--- a/v2/src/main/java/view/product/ProductResgistrationDialog.form
+++ b/v2/src/main/java/view/product/ProductResgistrationDialog.form
@@ -447,7 +447,7 @@
                               </Group>
                               <Component id="searchSupplier" alignment="1" min="-2" pref="23" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="11" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
